--- a/infinitescroll/templates/base.html
+++ b/infinitescroll/templates/base.html
@@ -3,9 +3,9 @@
 <head>
 <title>Page Title</title>
 
-<script src="{% static 'js/jquery-3.1.1.min.js' %}"></script>
-<script src="{% static 'js/jquery.waypoints.min.js' %}"></script>
-<script src="{% static 'js/infinite.min.js' %}"></script>
+<script src="{% static 'js/jquery-3.2.1.js' %}"></script>
+<script src="{% static 'js/waypoint.js' %}"></script>
+<script src="{% static 'js/infinite.js' %}"></script>
 
 
 </head>
