--- a/infinitescroll/templates/home.html
+++ b/infinitescroll/templates/home.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-Infinite
+Infiniteeeeee
   <div class="infinite-container">
     {% for number in numbers %}
       <div class="infinite-item">{{ number }}</div>
